--- a/.github/workflows/build-pi.yml
+++ b/.github/workflows/build-pi.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Grab tar source code - creates wxPython-4.1.0 subdir
       if: false
-      run |
+      run: |
         curl https://files.pythonhosted.org/packages/cb/4f/1e21d3c079c973ba862a18f3be73c2bbe2e6bc25c96d94df605b5cbb494d/wxPython-4.1.0.tar.gz > junk.tar.gz 
         tar xf junk.tar.gz 
     - name: Setup Python please
